WIP: File upload validations, file_field updates, required field scss, FormBuilder cleanup

--- a/app/views/grants/forms/_form.html.erb
+++ b/app/views/grants/forms/_form.html.erb
@@ -32,6 +32,10 @@
       <% end %>
     </div>
   </fieldset>
+  <div class="cell">
+    <%= label :project_title, 'Project Title' %>
+    <%= text_field :project_title, '', placeholder: 'This field is required', disabled: true %>
+  </div>
   <%= f.fields_for :sections, @form.sections.sort_by {|section| section.display_order || 0 } do |ff| %>
     <%= render partial: 'section_form', locals: { section: ff, has_edit_permission: has_edit_permission} %>
     <% end %>
