Define policies for form builder models (#102)
* Remove constraint, default_set, question, submission, and response.

* Change grant_user to grant_permission

* WIP: migration and models

* WIP: Submission::Form controller, edit view, misc dependencies

* WIP: Add apply controller, edit view

* WIP: Simple submission controller and view

* WIP: change Submission namespace to GrantSubmission

* WIP: Add apply path, begin submission index

* WIP: GrantSubmission form and submission edits

* WIP: Fix date responses, create new SubmissionForm with new Grant

* WIP: Fix pick_one and multiple_choice_option responses

* Remove grant_forms table

* WIP: Fix GrantSubmissionForm::New service

* WIP: remove GrantSubmissions::Submission grant_form method

* WIP: Fix specs, add GrantBuilder::Form factory, add GrantBuilder::Form duplicate service

* WIP: first attempt at defining policies for form_builder additions. #73

* WIP: Add activerecord locale files, update Submission error messages, misc frontend and method clean up

* WIP: rethink scopes and contexts with policies. #73

* WIP: Begin submissions/delete_all controller

* WIP: work on submission policies. #73

* WIP: start to add error messaging for pundit. #73

* WIP: create new policy specs. #73

* WIP: added tests. #73

* WIP: add more tests for policies. #73

* WIP change factories to reflect created_by wording. #73

* WIP: clean up for merge. #73

* WIP add can_be_deleted grant helper method. #73

* PR edits for form builder policies. #73

--- a/app/views/grants/index.html.haml
+++ b/app/views/grants/index.html.haml
@@ -13,7 +13,7 @@
       %tr
         %td= link_to grant.name, grant
         %td= link_to 'Edit', edit_grant_path(grant) if policy(grant).edit?
-        %td=  link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy?
+        %td=  link_to 'Delete', grant, method: :delete, data: { confirm: 'Are you sure?' } if policy(grant).destroy? && grant_can_be_deleted?(grant)
 
 %br
 
