Add GrantSubmission show action, add partials per response_type

--- a/app/assets/stylesheets/grant_submission_response.scss
+++ b/app/assets/stylesheets/grant_submission_response.scss
@@ -16,6 +16,11 @@ main.submissions {
         font-size: .85em;
         font-style: italic;
       }
+      .no-response {
+        font-size: .85em;
+        font-style: italic;
+        text-transform: uppercase
+      }
     }
   }
 }
