--- a/app/views/grant_submissions/submissions/_form.html.haml
+++ b/app/views/grant_submissions/submissions/_form.html.haml
@@ -2,7 +2,7 @@
 = f.hidden_field :grant_submission_form_id
 .grid-x
   .cell.small-12.medium-3
-    = f.label :title, 'Project Title', class: 'middle'
+    = f.label :title, class: 'middle'
   .cell.small-12.medium-9
     = f.text_field :title, required: true
 
