--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,7 +1,3 @@
-.tabs-title.is-active {
-  background-color: #e6e6e6;
-}
-
 main {
   .menu.simple {
     margin: 1rem 0;
@@ -31,5 +27,9 @@ th {
 .field_with_errors {
   input, select, textarea {
     border: 1px solid #cc4b37;
+    box-shadow: 0 0 2px #cc4b37;
   }
+}
+.tabs-title.is-active {
+  background-color: #e6e6e6;
 }
