--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -20,7 +20,7 @@
 @include foundation-accordion;
 @include foundation-accordion-menu;
 @include foundation-badge;
-@include foundation-breadcrumbs;
+// @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
 @include foundation-card;
@@ -33,14 +33,14 @@
 @include foundation-responsive-embed;
 @include foundation-label;
 @include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
+// @include foundation-off-canvas;
+// @include foundation-orbit;
+// @include foundation-pagination;
 @include foundation-progress-bar;
 @include foundation-slider;
 @include foundation-sticky;
 @include foundation-reveal;
-@include foundation-switch;
+// @include foundation-switch;
 @include foundation-table;
 @include foundation-tabs;
 @include foundation-thumbnail;
@@ -54,3 +54,13 @@
 //
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+.button {
+  background-color: #5fbb7e;
+  &.success {
+    &.hollow {
+      border-color: #5fbb7e;
+      color: #5fbb7e;
+    }
+  }
+}
