--- a/app/views/grant_submissions/submissions/new.html.haml
+++ b/app/views/grant_submissions/submissions/new.html.haml
@@ -13,5 +13,7 @@
   .small-12.medium-9.cell#rfa
     %h4
       Apply
+    = @submission.form.description
+    %hr
     = grant_form_for [@grant, @submission], url: grant_submissions_url, html: {multipart: true} do |f|
       = render partial: 'form', locals: { f: f }
