--- a/app/views/grant_submissions/forms/_question_form.html.erb
+++ b/app/views/grant_submissions/forms/_question_form.html.erb
@@ -1,43 +1,46 @@
 <fieldset class="fieldset form_builder_question_fieldset">
   <legend>
-      <span>Question</span>
-      <%= question.link_to_remove 'Delete', class: 'button tiny btn-pill hollow warning' if has_edit_permission %></legend>
-  <table class="question_table table" style="width: auto;">
-    <tr>
-      <th><%= question.label :text %></th>
-      <th><%= question.label :display_order %></th>
-      <th><%= question.label :is_mandatory %></th>
-      <th><%= question.label :response_type %></th>
-    </tr>
+    <span>Question</span>
+    <%= question.link_to_remove 'Delete', class: 'button tiny btn-pill hollow alert' if has_edit_permission %>
+  </legend>
 
+  <table class="question_table table unstriped" style="width: auto;">
+    <thead>
+      <tr>
+        <th><%= question.label :text %></th>
+        <th><%= question.label :is_mandatory %></th>
+        <th><%= question.label :response_type %></th>
+      </tr>
+    </thead>
     <tr>
       <td><%= question.text_area :text, rows: 1 %></td>
-      <td><%= question.text_field :display_order, size: 3 %></td>
-      <td><%= question.select :is_mandatory, options_for_select([true, false], question.object.is_mandatory || false), include_blank: true %></td>
-      <td><%= question.select :response_type, GrantSubmission::Question::VIEW_RESPONSE_TYPE_TRANSLATION.invert.to_a, { include_blank: true }, class: 'form_builder_question_response_type' %></td>
+      <td><%= question.select :is_mandatory, options_for_select([['Yes', true], ['No', false]], question.object.is_mandatory || false), { include_blank: 'Select One' } %></td>
+      <td><%= question.select :response_type, GrantSubmission::Question::VIEW_RESPONSE_TYPE_TRANSLATION.invert.to_a, { include_blank: 'Select a Response Type' }, class: 'form_builder_question_response_type' %></td>
     </tr>
 
-    <tr>
-      <th colspan="8"><%= question.label :instruction %> </td>
-    </tr>
+    <thead>
+      <tr>
+        <th colspan="8"><%= question.label :instruction %> </th>
+      </tr>
+    </thead>
     <tr>
       <td colspan="8"><%= question.text_area :instruction, rows: 1, cols: 100 %></td>
     </tr>
   </table>
 
-  <table class="submission_multiple_choice_options_table table table-condensed table-striped" style="width: auto;">
+  <table class="submission_multiple_choice_options_table table table-condensed unstriped" style="width: auto;">
+    <thead>
+      <tr>
+        <th colspan=4>
+          Multiple Choice Options
+          <% if has_edit_permission %>
+            <%= question.link_to_add 'Add an Option', :multiple_choice_options, data: { location: 'parent', target: '.submission_multiple_choice_options_table'}, class: 'button btn-pill small hollow primary' %>
+          <% end %>
+        </th>
+      </tr>
+    </thead>
     <tr>
-      <td colspan=4>
-        Multiple Choice Options
-        <% if has_edit_permission %>
-          <%= question.link_to_add 'Add an Option', :multiple_choice_options, data: { location: 'parent', target: '.submission_multiple_choice_options_table'}, class: 'button btn-pill small hollow primary' %>
-        <% end %>
-      </td>
-    </tr>
-    <tr>
-      <td>Text</td>
-      <td>Display Order</td>
-      <!-- <td>Export Code</td>  -->
+      <td>Select Text</td>
       <td></td>
     </tr>
     <%= question.fields_for :multiple_choice_options, question.object.multiple_choice_options.sort_by{ |option| option.display_order || 0}, wrapper: false do |option| %>
