--- a/app/views/grant_reviewers/_reviewers.html.haml
+++ b/app/views/grant_reviewers/_reviewers.html.haml
@@ -31,5 +31,5 @@
               - submission = review.submission
               %li.review{id: "review_#{"#{review.id}"}", data: { destination_url: grant_submission_submission_review_path(grant, submission, review) }}
                 %span
-                  = "#{sortable_full_name(submission.applicant)}: #{submission.title.truncate_words(15)}"
+                  = "#{sortable_full_name(submission.applicant)}: #{truncate(submission.title, length: 40)}"
 
