--- a/app/views/grant_reviewers/_unassigned_submissions.html.haml
+++ b/app/views/grant_reviewers/_unassigned_submissions.html.haml
@@ -4,5 +4,5 @@
     .cell.small-10.large-offset-1
       .unassigned_submission{id: "submission_#{submission.id}", data: { destination_url: grant_submission_submission_reviews_path(grant.id, submission.id) }}
         %span
-          #{submission.applicant.last_name}, #{submission.applicant.first_name}: #{submission.title.truncate_words(10)}
+          #{submission.applicant.last_name}, #{submission.applicant.first_name}: #{truncate(submission.title, length: 40)}
           (#{@grant.max_reviewers_per_proposal  - submission.reviews_count})
