--- a/app/views/reviews/edit.html.haml
+++ b/app/views/reviews/edit.html.haml
@@ -1,7 +1,24 @@
-%h1 Editing review
+- content_for(:page_title, "Reviewing #{@review.submission.title}")
 
-= render 'form'
 
-= link_to 'Show', @review
-\|
-= link_to 'Back', reviews_path
+%h1 Reviewer Form
+
+#submission-info
+  %h3
+    Submission Information
+  .applicant
+    %label
+      Applicant:
+    #{full_name(@review.submission.applicant)}
+  .title
+    %label
+      Submission:
+    = link_to @review.submission.title, grant_submission_path(@review.grant, @review.submission)
+
+- if @review.grant.review_guidance.present?
+  #review-guidance
+    %h3
+      Reviewer Guidance:
+    = @review.grant.review_guidance.html_safe
+
+= render partial: 'form', locals: { grant: @review.grant, submission: @review.submission, review: @review }
