--- a/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
@@ -6,12 +6,16 @@
       = f.label :overall_impact_score, class: 'required-true'
     .cell.small-12.medium-9
       .button-group
+        %label.scoring-guidance
+          Exceptional
         - (Review::MINIMUM_ALLOWED_SCORE..Review::MAXIMUM_ALLOWED_SCORE).each do |value|
           .score_value
             = f.radio_button('overall_impact_score', value, { id: "overall-#{value}" })
             = f.label "#{value}", { class: 'button', for: "overall-#{value}" }
+        %label.scoring-guidance
+          Poor
 
-  #overall_comment.grid-x
+  #overall_comment.comment.grid-x
     .cell.small-12.medium-3
       = f.label :overall_impact_comment
     .cell.small-12.medium-9
