--- a/app/views/shared/_grant_edit_tabbed_menu.html.haml
+++ b/app/views/shared/_grant_edit_tabbed_menu.html.haml
@@ -1,8 +1,6 @@
 %h1
   = grant.name
 
-= @role
-
 #grant-state
   %strong
     Current Publish Status:
@@ -12,11 +10,12 @@
 %ul.tabs#grant-info{ class: "grant-edit grant-#{grant.id}-edit" }
   - {'View' => grant_path(grant),                                          |
      'Edit' => edit_grant_path(grant),                                     |
-     'Submission Form' => edit_grant_form_path(grant, grant.form),         |
      'Permissions' => grant_grant_permissions_path(grant),                 |
+     'Submission Form' => edit_grant_form_path(grant, grant.form),         |
      'Submissions' => grant_submissions_path(grant),                       |
      'Reviewers' => grant_reviewers_path(grant),                           |
      'Review Criteria' => criteria_grant_path(grant),                      |
+     'Reviews' => grant_reviews_path(grant),                               |
      'Duplicate' => new_grant_duplicate_path(grant)  }.each do |tab, path|
     %li.tabs-title{ class: [request.path == path && 'is-active'] }
       = link_to tab, path
