--- a/app/views/grant_submissions/submissions/reviews/index.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/index.html.haml
@@ -17,28 +17,35 @@
           Applicant:
       .cell.small-12.medium-10
         = full_name(@submission.applicant)
-  %table.hover
-    %thead
-      %tr
-        %th
-          Reviewer
-        %th
-          Review
-        %th
-          Overall Impact
-        %th
-          Composite
-        - @grant.criteria.each do |criterion|
-          %th= criterion.name
-
-    %tbody
-      - @reviews.each do |review|
-        %tr
-          %td= full_name(review.reviewer)
-          %td= link_to 'Full Review', grant_submission_review_path(@grant, @submission, review)
-          %td= (review.overall_impact_score || 0)
-          %td= review.composite_score
-          - @grant.criteria.each do |criterion|
-            - criterion_score = review.criteria_reviews.detect { |cr| cr.criterion_id == criterion.id }
-            %td= criterion_score.score || ''
-
+    .grid-x
+      .cell.small-12
+        - if @reviews.empty?
+          %p
+            There are no reviews for this submission.
+            = link_to 'Assign it to a reviewer', grant_reviewers_path(@grant)
+        -else
+          %table.hover
+            %thead
+              %tr
+                %th
+                  Reviewer
+                %th
+                  Review
+                %th
+                  Overall Impact
+                %th
+                  Composite
+                - @grant.criteria.each do |criterion|
+                  %th= criterion.name
+            %tbody
+            - @reviews.each do |review|
+              %tr
+                %td= full_name(review.reviewer)
+                %td
+                  = review.is_complete? ? link_to('Full Review', grant_submission_review_path(@grant, @submission, review)) : 'Incomplete'
+                %td= (review.overall_impact_score || 0)
+                %td= review.composite_score
+                - @grant.criteria.each do |criterion|
+                  %td
+                    - criterion_score = review.criteria_reviews.detect { |cr| cr.criterion_id == criterion.id }
+                    = (criterion_score.nil? || criterion_score.score.nil?)? '-' : criterion_score.score
