Reviewer opt-out action, and mailers for review un-/assign and opt-out

--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -4,5 +4,5 @@
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     :css
       /* Email styles need to be inline */
-  %body
+  %body{style: "font-family: helvetica,arial,sans-serif"}
     = yield
