--- a/app/views/grant_submissions/submissions/show.html.haml
+++ b/app/views/grant_submissions/submissions/show.html.haml
@@ -15,10 +15,12 @@
       = "#{@submission.applicant.first_name} #{@submission.applicant.last_name}"
 
     - if @submission.reviewers.include?(current_user)
+      - review = find_review_by_submission_and_reviewer(@submission, current_user)
       %p
-        = link_to 'Review this Submission', edit_grant_submission_review_path(@grant, @submission, find_review_by_submission_and_reviewer(@submission, current_user)), class: 'button'
-    %p
-      - if policy(@submission).edit?
+        = link_to 'Review this Submission', edit_grant_submission_review_path(@grant, @submission, review), class: 'button'
+        = link_to 'Opt Out of Review', opt_out_grant_submission_review_path(@grant, @submission, review), method: :delete, data: { confirm: 'You will no longer be able to view or review this submission.'}, class: 'button clear secondary'
+    - if policy(@submission).edit?
+      %p
         = link_to 'See Reviews of this Submission', grant_submission_reviews_path(@submission.grant, @submission)
 
     .cell
