--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -1,6 +1,11 @@
 - if user_signed_in?
   %li
-    = link_to('Logout', destroy_user_session_path, method: :delete)
+    = link_to "#{full_name(current_user)}", '#'
+    %ul#logged-in.menu
+      %li
+        = link_to 'Edit Your Profile', profile_path
+      %li
+        = link_to 'Log Out', destroy_user_session_path, method: :delete
 - else
-  %li
-    = link_to('Login', new_user_session_path)
+  %li.menu-text.login
+    = link_to 'Login', new_user_session_path
