--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,8 @@
 %header.cell
   .top-bar
-    .to-bar-left
-      = link_to 'CD2H - Competitions', root_path
+    .top-bar-left
+      .home
+        = link_to 'CD2H - Competitions', root_path
     .top-bar-right
       %ul.dropdown.menu{"data-dropdown-menu" => ""}
         %li
