--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -9,11 +9,17 @@ header {
     ul.dropdown.menu {
       li.is-dropdown-submenu-parent {
         background-color: #FFF;
-      }
-      ul#logged-in {
-        background-color: #FFF;
-        li:first-of-type {
-          border-bottom: 1px solid #cacaca;
+        ul.is-dropdown-submenu {
+          background-color: #FFF;
+          li {
+            border-bottom: 1px solid #cacaca;
+            &:hover {
+              background-color: #F8F8F8;
+            }
+            &:last-of-type {
+              border-bottom: 0px;
+            }
+          }
         }
       }
     }
