--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -1,4 +1,10 @@
 - if user_signed_in?
+  - if current_user.system_admin?
+    %li
+      = link_to 'Admin', '#'
+      %ul#admin.menu
+        %li
+          = link_to 'Review Access Requests', grant_creator_requests_path
   %li
     = link_to "#{full_name(current_user)}", '#'
     %ul#logged-in.menu
