--- a/app/views/grant_creator_requests/_request_attributes.html.haml
+++ b/app/views/grant_creator_requests/_request_attributes.html.haml
@@ -20,8 +20,9 @@
         = f.label :request_comment
       .cell.small-12.medium-10
         = f.text_area :request_comment, class: 'small-12 medium-4', disabled: request.requester != current_user
-    .grid-x
-      .cell.small-12.medium-2
-        = f.label :status, 'Review Status'
-      .cell.small-12.medium-10
-        = GrantCreatorRequest::STATUSES[request.status.to_sym]
+    - if request.persisted?
+      .grid-x
+        .cell.small-12.medium-2
+          = f.label :status, 'Review Status'
+        .cell.small-12.medium-10
+          = GrantCreatorRequest::STATUSES[request.status.to_sym]
