--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -25,6 +25,22 @@
         = f.label :era_commons
       .cell.small-12.medium-10
         = f.text_field :era_commons, class: 'small-12 medium-4'
+    .grid-x
+      .cell.small-12.medium-2
+        = f.label :user_type
+      .cell.small-12.medium-10
+        - if @user.grant_creator?
+          Grant Creator
+        - elsif @user.system_admin?
+          System Administrator
+        - elsif @user.grant_creator_requests.pending.any?
+          .button.holow.disabled
+            Pending Grant Creation Request
+        - else
+          User
+          %br
+          = link_to 'Request Grant Creation Permission', new_grant_creator_request_path
+
 
 .actions
   = f.submit 'Update', class: 'button'
