--- a/app/views/grants/show.html.haml
+++ b/app/views/grants/show.html.haml
@@ -19,7 +19,7 @@
     %ul.menu.simple#user-links
       =# @grant.apply_menu_link
       %li
-        = link_to 'View All Grants', root_path
+        = link_to 'View Open Grants', root_path
 
     %ul.menu.simple#admin-links
       = @grant.edit_menu_link
