--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -5,6 +5,10 @@
       %ul#admin.menu
         %li
           = link_to 'Review Access Requests', grant_creator_requests_path
+        %li
+          = link_to 'All Grants', grants_path
+        %li
+          = link_to 'All Users', users_path
   %li
     = link_to "#{full_name(current_user)}", '#'
     %ul#logged-in.menu
