--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -11,5 +11,5 @@
   %tbody
     - @users.each do |user|
       %tr
-        %td= link_to user.name, profile_path(user)
+        %td= link_to sortable_full_name(user), edit_user_path(user)
         %td= user.email
