--- a/app/views/grant_permissions/edit.html.haml
+++ b/app/views/grant_permissions/edit.html.haml
@@ -4,7 +4,7 @@
 
 .tabs-panel.is-active
   %h2
-    = "Edit #{@grant_permission.user.name}'s Permission"
+    = "Edit #{full_name(@grant_permission.user)}'s Permission"
 
   .grid-x
     .cell
