--- a/app/views/grant_permissions/index.html.haml
+++ b/app/views/grant_permissions/index.html.haml
@@ -29,7 +29,7 @@
         - @grant_permissions.each do |grant_permission|
           %tr
             %td
-              = grant_permission.user.name
+              = full_name(grant_permission.user)
             %td
               = grant_permission.role
             %td
