--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,16 +1,15 @@
-%h1 Users
+%h3 All Users
 
 %table
   %thead
     %tr
       %th
+        Name
+      %th
         Email
-      %th
-      %th
 
   %tbody
     - @users.each do |user|
       %tr
+        %td= link_to sortable_full_name(user), edit_user_path(user)
         %td= user.email
-        %td= link_to 'Edit', edit_user_path(user)
-        %td= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }
