--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,5 +1,7 @@
-- content_for(:page_title, "#{@user.name}")
+- content_for(:page_title, "Edit #{full_name(@user)}")
 
-%h1= "Editing #{@user.name} Profile"
+%h1
+  = yield :page_title
 
-= render 'form'
+= form_with(model: @user, url: profile_path, method: :put, local: true) do |f|
+  = render partial: 'users/form', locals: { f: f }
