Fix profile edit bug #168

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -39,7 +39,7 @@
         - else
           User
           %br
-          = link_to 'Request Grant Creation Permission', new_grant_creator_request_path
+          = link_to 'Request Grant Creation Permission', new_grant_creator_request_path if current_user == @user
 
 
 .actions
