--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -3,5 +3,7 @@
 %h1
   = yield :page_title
 
-= form_with(model: @user, url: profile_path, method: :put, local: true) do |f|
+= form_with(model: @user, url: user_path, method: :put, local: true) do |f|
   = render partial: 'users/form', locals: { f: f }
+
+= link_to 'Back to all Users', users_path
