--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -10,6 +10,7 @@
     %p
       There are no submissions to this grant.
   - else
+
     %table.table.table-condensed
       %thead
         %tr
@@ -21,7 +22,7 @@
         - @submissions.sort_by(&:id).sort_by(&:date_order).each do |submission|
           %tr
             %td
-              = link_to submission.applicant.name, grant_submission_path(@grant, submission)
+              = link_to full_name(submission.applicant), grant_submission_path(@grant, submission)
             %td
               = link_to submission.title, grant_submission_path(@grant, submission)
             %td
@@ -30,3 +31,6 @@
               = link_to 'Reviews', grant_submission_reviews_path(@grant, submission), class: 'button clear'
               = link_to 'Edit', edit_grant_submission_path(@grant, submission), class: 'button clear'
               = link_to 'Delete', grant_submission_path(@grant, submission), method: :delete, data: { confirm: 'Are you sure?'}, class: 'button clear alert', confirm: 'Are you sure?'
+
+    = pagy_foundation_nav(@pagy).html_safe
+
